[tool.poetry]
name = "nhdaaml20230419"
version = "0.1.0"
description = ""
authors = ["Parth Lakhani <parth@prlakhani.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sketch = "^0.3.5"
jupyterlab = "^3.6.3"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
bokeh = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
